--- a/proyecto1/estilo.css
+++ b/proyecto1/estilo.css
@@ -1,18 +1,22 @@
 * {
-  font-family: 'Cairo', sans-serif;
+  font-family: "Cairo", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   margin: 0;
-  background: #141E30;
-  background: -webkit-linear-gradient(to right, #243B55, #141E30);
-  background: linear-gradient(to right, #243B55, #141E30);
+  background: #141e30;
+  background: -webkit-linear-gradient(to right, #243b55, #141e30);
+  background: linear-gradient(to right, #243b55, #141e30);
 }
 
 .header {
   background: black;
   width: 100%;
   height: 80px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .header__img {
@@ -21,32 +25,50 @@ body {
 }
 
 .header__menu {
-  margin: 20px;
+  /* margin-top: 20px; */
 }
 
 .header__menu--profile {
-  margin-right: 10px;
-  width: 40px;
+  width: 100px;
+  height: 100%;
+  margin-right: 20px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .header__menu--profile img {
-  width: 40px;
+  height: 40px;
 }
 
 .header__menu ul {
-  /* display: none; */
+  display: none;
   list-style: none;
   padding: 0;
   position: absolute;
   width: 100px;
   text-align: right;
-  margin: 0 0 0 -14px;
+  /* background-color: red; */
+}
+.header__menu:hover ul,
+ul:hover {
+  display: block;
 }
 
-.header__menu ul li {}
+.header__menu li {
+  margin: 8px 0px;
+}
+
+.header__menu li:hover {
+  border-left: 2px solid yellow;
+}
 
 .header__menu ul li a {
-  /* display: none; */
   text-decoration: none;
   color: white;
+}
+
+.header__menu ul li a:hover {
+  color: yellow;
 }
