--- a/proyecto1/estilo.css
+++ b/proyecto1/estilo.css
@@ -11,6 +11,7 @@ body {
   background: linear-gradient(to right, #243b55, #141e30);
   color: white;
   background: url(./img/bg_blue.png);
+  background-size: cover;
 }
 
 .header {
@@ -49,6 +50,7 @@ body {
   text-align: right;
   /* background-color: red; */
 }
+
 .header__menu:hover ul,
 ul:hover {
   display: block;
@@ -122,14 +124,15 @@ ul:hover {
   background-color: white;
   border-radius: 20px;
   display: inline-block;
-  /* overflow:hidden; */
+  overflow: hidden;
   cursor: pointer;
   transition: 450ms;
   transform-origin: center left;
-  background: url(./img/music/music_1.jpg);
   background-size: cover;
+  position: relative;
 }
-.carousel__item:hover ~ .carousel__item {
+
+.carousel__item:hover~.carousel__item {
   transform: translate3d(50px, 0, 0);
 }
 
@@ -142,5 +145,50 @@ ul:hover {
   opacity: 1;
 }
 
-.carousel__item:hover {
+.carousel__item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousel-item__details {
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0) 100%);
+  font-size: 14px;
+  opacity: 0;
+  transition: 1s opacity;
+  padding: 5px;
+  position: absolute;
+  top: 60px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.carousel__item:hover .carousel-item__details {
+  opacity: 1;
+}
+
+.carousel-item__details--iconos {
+  text-align: center;
+}
+
+.carousel-item__details--iconos img {
+  width: 60px;
+  filter: invert(1);
+  opacity: 0.8;
+  transition: 100ms;
+}
+
+.carousel-item__details--iconos img:hover {
+  opacity: 1;
+}
+
+.carousel-item__details--title {
+  margin-left: 15px;
+  font-size: 20px;
+}
+
+.carousel-item__details--subtitle {
+  margin-left: 15px;
+  line-height: 2px;
 }
