--- a/portafolio/estilos.css
+++ b/portafolio/estilos.css
@@ -1,3 +1,11 @@
+/* 
+#527AB3
+#A8CCFF
+#8FBEFF
+#B38C40
+#FFD98F 
+*/
+
 * {
   margin: 0;
   padding: 0;
@@ -12,6 +20,68 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: 'Roboto',
-    sans-serif;
+  font-family: 'Fjalla One', sans-serif;
+}
+
+.header {
+  background-color: #527AB3;
+  display: flex;
+  justify-content: space-between;
+  height: 70px;
+  align-items: center;
+}
+
+.header nav {
+  height: inherit;
+}
+
+.header ul {
+  list-style: none;
+  display: flex;
+  height: inherit;
+}
+
+.header li {
+  height: inherit;
+}
+
+.header a {
+  color: white;
+  text-decoration: none;
+  height: inherit;
+  display: flex;
+  align-items: center;
+  padding-right: 20px;
+}
+
+.header a:hover {
+  color: #FFD98F;
+}
+
+.hero {
+  height: 50vh;
+  background: url(./fondo.jpg);
+  background-size: cover;
+  color: white;
+  display: flex;
+  align-items: center;
+}
+
+.hero h1 {
+  font-size: 40px;
+  line-height: 1.5;
+  text-shadow: 1px 1px 2px black;
+}
+
+.hero h1 strong {
+  color: #FFD98F;
+  text-shadow: 1px 1px 2px black;
+}
+
+.footer {
+  background-color: #B38C40;
+  display: flex;
+  height: 40px;
+  align-items: center;
+  justify-content: space-evenly;
 }
