--- a/portafolio/estilos.css
+++ b/portafolio/estilos.css
@@ -14,12 +14,11 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
+  background-color: #A8CCFF;
 }
 
 h1,
-h2,
-h3,
-h4 {
+h2 {
   font-family: 'Fjalla One', sans-serif;
 }
 
@@ -71,6 +70,7 @@ h4 {
   font-size: 40px;
   line-height: 1.5;
   text-shadow: 1px 1px 2px black;
+  margin: 20px;
 }
 
 .hero h1 strong {
@@ -78,10 +78,178 @@ h4 {
   text-shadow: 1px 1px 2px black;
 }
 
+h2 {
+  font-size: 32px;
+  color: #B38C40;
+  text-shadow: 1px 1px 2px black;
+  text-transform: uppercase;
+  margin: 40px 20px;
+}
+
+h3 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.project {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px;
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  font-size: 16px;
+}
+
+.project_details {
+  margin-right: 20px;
+
+}
+
+.events {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.event {
+  margin: 20px;
+  min-width: 400px;
+  width: 500px;
+  overflow: hidden;
+  border-radius: 10px;
+  font-size: 16px;
+  background: rgb(221, 221, 221);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.event img {
+  width: 100%;
+}
+
+.event_details {
+  margin: 30px;
+  margin-top: -60px;
+  margin-bottom: 40px;
+  background: white;
+  padding: 20px;
+  position: relative;
+}
+
+.contact {
+  background-color: #8FBEFF;
+}
+
+.contact .wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 20px 0;
+  padding-bottom: 40px;
+}
+
+.contact h2 {
+  padding-top: 20px;
+  margin: 0 20px 20px;
+}
+
+.form_email #email {
+  padding: 10px;
+  border-radius: 5px;
+  background-image: url(./car.png);
+  background-size: 20px 20px;
+  background-repeat: no-repeat;
+  background-position: center left;
+  background-position-x: 10px;
+  padding-left: 40px;
+  font-size: 20px;
+  border: 1px solid white;
+  width: 300px;
+}
+
+.form_email #btn {
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 20px;
+  display: block;
+  background-color: transparent;
+  color: white;
+  margin-top: 10px;
+  border: 2px solid white;
+}
+
+.social-link {
+  display: inline-block;
+  width: 45px;
+  height: 45px;
+  background-size: 45px 45px;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-left: 20px;
+}
+
+.twitter {
+  background-image: url(./car.png);
+}
+
+.facebook {
+  background-image: url(./car.png);
+}
+
+.instagram {
+  background-image: url(./car.png);
+}
+
+.github {
+  background-image: url(./car.png);
+}
+
 .footer {
-  background-color: #B38C40;
+  background-color: #527AB3;
   display: flex;
   height: 40px;
   align-items: center;
   justify-content: space-evenly;
+}
+
+.container {
+  margin: 0 auto;
+  width: 1200px;
+  display: inherit;
+  justify-content: inherit;
+  align-items: inherit;
+  height: inherit;
+}
+
+@media only screen and (max-width:850px) {
+  .project {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .project_details {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .project img {
+    max-width: 400px;
+    width: 100%;
+  }
+
+}
+
+@media only screen and (max-width:615px) {
+  .contact .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 20px;
+  }
+
+  .social-link {
+    margin: 15px;
+  }
+
+
 }
