--- a/clon_google/style.css
+++ b/clon_google/style.css
@@ -15,44 +15,99 @@ li {
   list-style: none;
 }
 
+.flex_center, .main .main_links, .main .main_buttons, .main .main_container, .main {
+  display: flex;
+  justify-content: center;
+}
+
 .header {
   color: #222222;
   font-size: 13px;
   padding-right: 20px;
 }
-.header ul {
+.header .nav_items {
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
-.header li {
+.header .nav_link {
   line-height: 60px;
   margin: 0 7.5px;
 }
-.header .imagen, .header .menu, .header .user {
+.header .icono, .header .menu, .header .user {
   display: block;
-  background-position: center;
-  background-repeat: no-repeat;
+  width: 32px;
+  height: 32px;
 }
 .header .user {
   border-radius: 50%;
-  width: 32px;
-  height: 32px;
-  background-image: url(./user.png);
+  background: url(./user.png) center no-repeat;
 }
 .header .menu {
-  width: 36px;
-  height: 36px;
-  background-image: url(./menu.png);
+  background: url(./menu.png) center no-repeat;
   background-size: 18px 18px;
   filter: invert(0.5);
 }
 
 .main {
   flex: 1;
-  display: flex;
-  justify-content: center;
   align-items: center;
+}
+.main .main_container {
+  flex-direction: column;
+  align-items: center;
+  margin-top: -110px;
+}
+.main .main_input {
+  margin: 20px;
+}
+.main .main_input .search_border {
+  margin: 10px;
+  border: 1px solid #e4e4e4;
+  border-radius: 22px;
+  padding: 5px 10px;
+  height: 44px;
+  width: 580px;
+  display: flex;
+  align-items: center;
+}
+.main .main_input .search_text {
+  border: none;
+  width: 100%;
+  margin: 0 5px;
+  font-size: 16px;
+  padding: 5px 10px;
+}
+.main .main_input .search_text:hover {
+  outline: none;
+}
+.main .main_input .search_text:focus {
+  outline: none;
+}
+.main .search_border:hover {
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+.main .main_buttons .button_search {
+  padding: 10px 25px;
+  border: 1px solid #f2f2f2;
+  background-color: #f2f2f2;
+  margin: 11px 6px;
+  font-size: 14px;
+  border-radius: 3px;
+}
+.main .main_buttons .button_search:hover {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+.main .main_links {
+  font-size: 13px;
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+.main .main_links .link_language {
+  margin: 5px;
+  text-decoration: none;
 }
 
 .footer {
@@ -64,7 +119,7 @@ li {
   line-height: 40px;
   padding: 0 15px;
 }
-.footer li {
+.footer .footer_link {
   padding: 0 12.5px;
 }
 .footer .footer_top {
@@ -77,10 +132,7 @@ li {
   justify-content: space-between;
   border-top: 1px solid #e4e4e4;
 }
-.footer .footer_bottom .footer_left ul {
-  display: flex;
-}
-.footer .footer_bottom .footer_right ul {
+.footer .footer_bottom .footer_list {
   display: flex;
 }
 
