--- a/grid/style.css
+++ b/grid/style.css
@@ -8,23 +8,39 @@ body {
 
 .container {
   display: grid;
-  /* grid-template-columns: 25% 50% 25%;
-  grid-template-rows: 100px; */
-  grid-template: 100px 220px 100px 100px / 320px 1fr 1fr;
+  grid-template: 1fr 2fr 1fr / 1fr 2fr 1fr;
+  grid-template-areas:
+    "header  header header"
+    "aside  contenido contenido"
+    "aside  footer footer";
   text-align: center;
-  gap: 20px 30px;
-  margin: 20px;
+  gap: 10px;
+  margin: 10px;
+  height: calc(100vh - 20px);
 }
 
 .item {
   padding: 10px;
   border: 1px solid #2d3436;
+  background-color: white;
 }
 
-.item:nth-of-type(4) {
-  background: skyblue;
-  overflow: auto;
-  display: grid;
-  grid-template: repeat(3, 100px) / repeat(3, 100px);
-  text-align: center;
+.header {
+  grid-area: header;
+}
+
+.aside {
+  grid-area: aside;
+}
+
+.contenido {
+  grid-area: contenido;
+}
+
+.footer {
+  grid-area: footer;
+}
+
+.nav {
+  grid-area: nav;
 }
