--- a/grid/style.css
+++ b/grid/style.css
@@ -6,7 +6,7 @@ body {
   padding: 0;
 }
 
-.container {
+.container2 {
   display: grid;
   grid-template: 1fr 2fr 1fr / 1fr 2fr 1fr;
   grid-template-areas:
@@ -17,9 +17,10 @@ body {
   gap: 10px;
   margin: 10px;
   height: calc(100vh - 20px);
+
 }
 
-.item {
+.item2 {
   padding: 10px;
   border: 1px solid #2d3436;
   background-color: white;
@@ -43,4 +44,37 @@ body {
 
 .nav {
   grid-area: nav;
+}
+
+.container1 {
+  display: grid;
+  grid-template: [inicio] 1fr [linea2] 1fr [linea3] 1fr [final] / repeat(4, 1fr);
+  text-align: center;
+  gap: 10px;
+  margin: 10px;
+  height: calc(100vh - 20px);
+  grid-auto-flow: row;
+  grid-auto-rows: 100px;
+
+}
+
+
+
+.item {
+  padding: 10px;
+  border: 1px solid #2d3436;
+  background-color: white;
+}
+
+.item:nth-of-type(2) {
+  grid-column: 2/-1;
+}
+
+.item:nth-of-type(3) {
+  grid-column: 1/3;
+  grid-row: linea2 / final;
+}
+
+.item:nth-of-type(4) {
+  grid-column: 3/5;
 }
