--- a/grid/style.css
+++ b/grid/style.css
@@ -17,7 +17,6 @@ body {
   gap: 10px;
   margin: 10px;
   height: calc(100vh - 20px);
-
 }
 
 .item2 {
@@ -48,17 +47,18 @@ body {
 
 .container1 {
   display: grid;
-  grid-template: [inicio] 1fr [linea2] 1fr [linea3] 1fr [final] / repeat(4, 1fr);
-  text-align: center;
+  grid-template: [inicio] 100px [linea2] 100px [linea3] 100px [final] / repeat(
+      4,
+      100px
+    );
+  /* text-align: center; */
   gap: 10px;
   margin: 10px;
   height: calc(100vh - 20px);
   grid-auto-flow: row;
   grid-auto-rows: 100px;
-
+  place-content: space-evenly;
 }
-
-
 
 .item {
   padding: 10px;
