--- a/portafolio/estilos.css
+++ b/portafolio/estilos.css
@@ -13,20 +13,21 @@
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
-  background-color: #A8CCFF;
+  font-family: "Open Sans", sans-serif;
+  background-color: #a8ccff;
 }
 
 h1,
 h2 {
-  font-family: 'Fjalla One', sans-serif;
+  font-family: "Fjalla One", sans-serif;
 }
 
 .header {
-  background-color: #527AB3;
+  background-color: #527ab3;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  height: 70px;
+  min-height: 70px;
   align-items: center;
 }
 
@@ -42,6 +43,16 @@ h2 {
 
 .header li {
   height: inherit;
+  text-align: center;
+  display: flex;
+  align-items: center;
+}
+
+.burger {
+  margin: 5px 20px;
+  display: none;
+  cursor: pointer;
+  z-index: 1;
 }
 
 .header a {
@@ -50,11 +61,15 @@ h2 {
   height: inherit;
   display: flex;
   align-items: center;
-  padding-right: 20px;
+  margin-right: 20px;
 }
 
 .header a:hover {
-  color: #FFD98F;
+  color: #ffd98f;
+}
+
+.logo {
+  margin: 0 20px;
 }
 
 .hero {
@@ -71,16 +86,17 @@ h2 {
   line-height: 1.5;
   text-shadow: 1px 1px 2px black;
   margin: 20px;
+  max-width: 500px;
 }
 
 .hero h1 strong {
-  color: #FFD98F;
+  color: #ffd98f;
   text-shadow: 1px 1px 2px black;
 }
 
 h2 {
   font-size: 32px;
-  color: #B38C40;
+  color: #b38c40;
   text-shadow: 1px 1px 2px black;
   text-transform: uppercase;
   margin: 40px 20px;
@@ -104,19 +120,19 @@ h3 {
 
 .project_details {
   margin-right: 20px;
-
 }
 
 .events {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 0 20px;
+  gap: 20px;
 }
 
 .event {
-  margin: 20px;
-  min-width: 400px;
-  width: 500px;
+  width: 100%;
   overflow: hidden;
   border-radius: 10px;
   font-size: 16px;
@@ -138,7 +154,7 @@ h3 {
 }
 
 .contact {
-  background-color: #8FBEFF;
+  background-color: #8fbeff;
 }
 
 .contact .wrapper {
@@ -205,26 +221,35 @@ h3 {
 }
 
 .footer {
-  background-color: #527AB3;
-  display: flex;
-  height: 40px;
-  align-items: center;
-  justify-content: space-evenly;
+  background-color: #527ab3;
+  min-height: 50px;
+  text-align: center;
+  padding: 15px;
 }
 
 .container {
   margin: 0 auto;
-  width: 1200px;
+  max-width: 1200px;
+  width: 100%;
   display: inherit;
   justify-content: inherit;
   align-items: inherit;
   height: inherit;
+  flex-wrap: inherit;
 }
 
-@media only screen and (max-width:850px) {
+@media only screen and (max-width: 768px) {
   .project {
     flex-direction: column;
     align-items: center;
+  }
+
+  .hero h1 {
+    font-size: 35px;
+  }
+
+  .events {
+    grid-template-columns: 1fr;
   }
 
   .project_details {
@@ -236,10 +261,9 @@ h3 {
     max-width: 400px;
     width: 100%;
   }
-
 }
 
-@media only screen and (max-width:615px) {
+@media only screen and (max-width: 480px) {
   .contact .wrapper {
     display: flex;
     flex-direction: column;
@@ -247,9 +271,87 @@ h3 {
     padding-bottom: 20px;
   }
 
+  .hero h1 {
+    font-size: 30px;
+  }
+
+  .logo {
+    text-align: center;
+  }
+
+  .menu ul {
+    display: block;
+  }
+
+  .menu a {
+    justify-content: center;
+    padding: 10px;
+    margin: 0;
+  }
+
+  .header {
+    display: block;
+  }
+
+  .header li {
+    justify-content: center;
+  }
+
   .social-link {
     margin: 15px;
   }
 
+  .form_email {
+    width: 100%;
+  }
+
+  .form_email #email {
+    width: 100%;
+  }
+
+  .form_email #btn {
+    margin: 15px auto;
+    width: 100%;
+  }
+
+  .burger {
+    display: block;
+    position: fixed;
+    top: 0;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    border-radius: 50%;
+    z-index: 2;
+  }
+
+  .burger img {
+    display: block;
+    filter: invert(1);
+  }
+
+  .menu {
+    position: fixed;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 1;
+    top: 0;
+    width: 100vw;
+    left: -100vw;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+    opacity: 0;
+  }
+
+  .header a {
+    margin: 20px;
+    font-size: 30px;
+  }
+
+  .menu.active {
+    left: 0;
+    opacity: 1;
+  }
 
 }
